# electronics-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  mkdocs.yml  pyproject.toml
.claude/commands/: bump.md  ship.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/development/: architecture.md  contributing.md  seed-data.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: circuits.md  fabrication.md  knowledge.md  rendering.md  simulation.md  web-ui.md
docs/plans/: 2026-03-04-electronics-mcp-design.md  2026-03-04-electronics-mcp-implementation.md
docs/reference/: component-types.md  database.md  resources.md  schema.md  tools.md
electronics_mcp/: __init__.py  config.py
electronics_mcp/core/: circuit_manager.py  database.py  schema.py  units.py
electronics_mcp/ingestion/: build_design_rules.py  build_formulas.py  build_subcircuits.py  cli_kicad.py  cli_kuphaldt.py  cli_spice.py  generate_seed.py  ingest_kicad_symbols.py  ingest_kuphaldt.py  ingest_spice_models.py  provenance.py  qa.py
electronics_mcp/mcp/: resources.py  server.py  tools_circuit.py  tools_comparison.py  tools_db.py  tools_fabrication.py  tools_knowledge.py  tools_rendering.py  tools_simulation.py  tools_subcircuit.py
electronics_mcp/web/: app.py  run.py
tests/: conftest.py  markers.py
tests/test_core/: test_circuit_manager.py  test_database.py  test_netlist.py  test_schema.py  test_units.py
tests/test_e2e/: conftest.py  test_agent_browser_roundtrip.py
tests/test_engines/: test_fabrication.py  test_knowledge.py  test_numerical.py  (+5 more)
(+46 files in other folders)
