[project]
name = "electronics-mcp"
version = "0.2.0"
description = "MCP server providing electronic engineering context and skills to LLM agents"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "PySpice>=1.5",
    "lcapy>=1.0",
    "schemdraw>=0.19",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "sympy>=1.12",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[project.scripts]
electronics-mcp = "electronics_mcp.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (require playwright)",
]
